fix: update z-index for main navbar

--- a/wp-content/themes/rozowe-studio/src/scss/layout/_header.scss
+++ b/wp-content/themes/rozowe-studio/src/scss/layout/_header.scss
@@ -5,13 +5,13 @@
     height: 116px;
     position: sticky;
     top: 0;
-    z-index: 1000;
     padding: 0;
     margin-bottom: -116px;
     opacity: 0;
     transition: opacity 0.3s ease;
     display: flex;
     align-items: center;
+    z-index: -1;
     .container {
         width: 100%;
     }
@@ -19,6 +19,7 @@
     &.is-sticky {
         background-color: $color-bg-primary;
         opacity: 1;
+        z-index: 1000;
     }
     
     .navbar-content {
